--- a/fr_method_index.html
+++ b/fr_method_index.html
@@ -4331,29 +4331,31 @@
         
         Element.addMethods();
         var search_index = [
-          { method: '[]', module: 'bone', html: '<a href="classes/Bone.html#M000008"><span class="method_name">[]</span> <span class="module_name">(Bone)</span></a>' },
-          { method: '[]=', module: 'bone', html: '<a href="classes/Bone.html#M000009"><span class="method_name">[]=</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'check!', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000018"><span class="method_name">check!</span> <span class="module_name">(Bone::CLI)</span></a>' },
+          { method: '[]', module: 'bone', html: '<a href="classes/Bone.html#M000010"><span class="method_name">[]</span> <span class="module_name">(Bone)</span></a>' },
+          { method: '[]=', module: 'bone', html: '<a href="classes/Bone.html#M000011"><span class="method_name">[]=</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'check!', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000020"><span class="method_name">check!</span> <span class="module_name">(Bone::CLI)</span></a>' },
           { method: 'debug?', module: 'bone', html: '<a href="classes/Bone.html#M000003"><span class="method_name">debug?</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'del', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000020"><span class="method_name">del</span> <span class="module_name">(Bone::CLI)</span></a>' },
-          { method: 'del', module: 'bone', html: '<a href="classes/Bone.html#M000007"><span class="method_name">del</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'digest', module: 'bone', html: '<a href="classes/Bone.html#M000015"><span class="method_name">digest</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'del', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000022"><span class="method_name">del</span> <span class="module_name">(Bone::CLI)</span></a>' },
+          { method: 'del', module: 'bone', html: '<a href="classes/Bone.html#M000009"><span class="method_name">del</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'digest', module: 'bone', html: '<a href="classes/Bone.html#M000017"><span class="method_name">digest</span> <span class="module_name">(Bone)</span></a>' },
           { method: 'disable_debug', module: 'bone', html: '<a href="classes/Bone.html#M000002"><span class="method_name">disable_debug</span> <span class="module_name">(Bone)</span></a>' },
           { method: 'enable_debug', module: 'bone', html: '<a href="classes/Bone.html#M000001"><span class="method_name">enable_debug</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'generate_token', module: 'bone', html: '<a href="classes/Bone.html#M000016"><span class="method_name">generate_token</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'get', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000019"><span class="method_name">get</span> <span class="module_name">(Bone::CLI)</span></a>' },
+          { method: 'generate_token', module: 'bone', html: '<a href="classes/Bone.html#M000018"><span class="method_name">generate_token</span> <span class="module_name">(Bone)</span></a>' },
           { method: 'get', module: 'bone', html: '<a href="classes/Bone.html#M000005"><span class="method_name">get</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'is_sha1?', module: 'bone', html: '<a href="classes/Bone.html#M000013"><span class="method_name">is_sha1?</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'is_sha256?', module: 'bone', html: '<a href="classes/Bone.html#M000014"><span class="method_name">is_sha256?</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'keys', module: 'bone', html: '<a href="classes/Bone.html#M000010"><span class="method_name">keys</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'keys', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000022"><span class="method_name">keys</span> <span class="module_name">(Bone::CLI)</span></a>' },
+          { method: 'get', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000021"><span class="method_name">get</span> <span class="module_name">(Bone::CLI)</span></a>' },
+          { method: 'get!', module: 'bone', html: '<a href="classes/Bone.html#M000006"><span class="method_name">get!</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'is_sha1?', module: 'bone', html: '<a href="classes/Bone.html#M000015"><span class="method_name">is_sha1?</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'is_sha256?', module: 'bone', html: '<a href="classes/Bone.html#M000016"><span class="method_name">is_sha256?</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'keys', module: 'bone', html: '<a href="classes/Bone.html#M000012"><span class="method_name">keys</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'keys', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000024"><span class="method_name">keys</span> <span class="module_name">(Bone::CLI)</span></a>' },
           { method: 'ld', module: 'bone', html: '<a href="classes/Bone.html#M000004"><span class="method_name">ld</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'require_vendor', module: 'bone', html: '<a href="classes/Bone.html#M000011"><span class="method_name">require_vendor</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'set', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000021"><span class="method_name">set</span> <span class="module_name">(Bone::CLI)</span></a>' },
-          { method: 'set', module: 'bone', html: '<a href="classes/Bone.html#M000006"><span class="method_name">set</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'token', module: 'bone', html: '<a href="classes/Bone.html#M000017"><span class="method_name">token</span> <span class="module_name">(Bone)</span></a>' },
-          { method: 'token', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000023"><span class="method_name">token</span> <span class="module_name">(Bone::CLI)</span></a>' },
-          { method: 'valid_token?', module: 'bone', html: '<a href="classes/Bone.html#M000012"><span class="method_name">valid_token?</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'require_vendor', module: 'bone', html: '<a href="classes/Bone.html#M000013"><span class="method_name">require_vendor</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'set', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000023"><span class="method_name">set</span> <span class="module_name">(Bone::CLI)</span></a>' },
+          { method: 'set', module: 'bone', html: '<a href="classes/Bone.html#M000007"><span class="method_name">set</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'set!', module: 'bone', html: '<a href="classes/Bone.html#M000008"><span class="method_name">set!</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'token', module: 'bone', html: '<a href="classes/Bone.html#M000019"><span class="method_name">token</span> <span class="module_name">(Bone)</span></a>' },
+          { method: 'token', module: 'bone::cli', html: '<a href="classes/Bone/CLI.html#M000025"><span class="method_name">token</span> <span class="module_name">(Bone::CLI)</span></a>' },
+          { method: 'valid_token?', module: 'bone', html: '<a href="classes/Bone.html#M000014"><span class="method_name">valid_token?</span> <span class="module_name">(Bone)</span></a>' },
         ]
         $(document).observe('dom:loaded', function() {
         	// Setup search-during-typing.
@@ -4424,29 +4426,31 @@
       </form>
       <ol class='methods' id='search-results' style='display: none'></ol>
       <ol class='methods' id='index-entries'>
-        <li><a href="classes/Bone.html#M000008"><span class="method_name">[]</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone.html#M000009"><span class="method_name">[]=</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone/CLI.html#M000018"><span class="method_name">check!</span> <span class="module_name">(Bone::CLI)</span></a></li>
+        <li><a href="classes/Bone.html#M000010"><span class="method_name">[]</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone.html#M000011"><span class="method_name">[]=</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone/CLI.html#M000020"><span class="method_name">check!</span> <span class="module_name">(Bone::CLI)</span></a></li>
         <li><a href="classes/Bone.html#M000003"><span class="method_name">debug?</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone/CLI.html#M000020"><span class="method_name">del</span> <span class="module_name">(Bone::CLI)</span></a></li>
-        <li><a href="classes/Bone.html#M000007"><span class="method_name">del</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone.html#M000015"><span class="method_name">digest</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone/CLI.html#M000022"><span class="method_name">del</span> <span class="module_name">(Bone::CLI)</span></a></li>
+        <li><a href="classes/Bone.html#M000009"><span class="method_name">del</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone.html#M000017"><span class="method_name">digest</span> <span class="module_name">(Bone)</span></a></li>
         <li><a href="classes/Bone.html#M000002"><span class="method_name">disable_debug</span> <span class="module_name">(Bone)</span></a></li>
         <li><a href="classes/Bone.html#M000001"><span class="method_name">enable_debug</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone.html#M000016"><span class="method_name">generate_token</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone/CLI.html#M000019"><span class="method_name">get</span> <span class="module_name">(Bone::CLI)</span></a></li>
+        <li><a href="classes/Bone.html#M000018"><span class="method_name">generate_token</span> <span class="module_name">(Bone)</span></a></li>
         <li><a href="classes/Bone.html#M000005"><span class="method_name">get</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone.html#M000013"><span class="method_name">is_sha1?</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone.html#M000014"><span class="method_name">is_sha256?</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone.html#M000010"><span class="method_name">keys</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone/CLI.html#M000022"><span class="method_name">keys</span> <span class="module_name">(Bone::CLI)</span></a></li>
+        <li><a href="classes/Bone/CLI.html#M000021"><span class="method_name">get</span> <span class="module_name">(Bone::CLI)</span></a></li>
+        <li><a href="classes/Bone.html#M000006"><span class="method_name">get!</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone.html#M000015"><span class="method_name">is_sha1?</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone.html#M000016"><span class="method_name">is_sha256?</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone.html#M000012"><span class="method_name">keys</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone/CLI.html#M000024"><span class="method_name">keys</span> <span class="module_name">(Bone::CLI)</span></a></li>
         <li><a href="classes/Bone.html#M000004"><span class="method_name">ld</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone.html#M000011"><span class="method_name">require_vendor</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone/CLI.html#M000021"><span class="method_name">set</span> <span class="module_name">(Bone::CLI)</span></a></li>
-        <li><a href="classes/Bone.html#M000006"><span class="method_name">set</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone.html#M000017"><span class="method_name">token</span> <span class="module_name">(Bone)</span></a></li>
-        <li><a href="classes/Bone/CLI.html#M000023"><span class="method_name">token</span> <span class="module_name">(Bone::CLI)</span></a></li>
-        <li><a href="classes/Bone.html#M000012"><span class="method_name">valid_token?</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone.html#M000013"><span class="method_name">require_vendor</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone/CLI.html#M000023"><span class="method_name">set</span> <span class="module_name">(Bone::CLI)</span></a></li>
+        <li><a href="classes/Bone.html#M000007"><span class="method_name">set</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone.html#M000008"><span class="method_name">set!</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone.html#M000019"><span class="method_name">token</span> <span class="module_name">(Bone)</span></a></li>
+        <li><a href="classes/Bone/CLI.html#M000025"><span class="method_name">token</span> <span class="module_name">(Bone::CLI)</span></a></li>
+        <li><a href="classes/Bone.html#M000014"><span class="method_name">valid_token?</span> <span class="module_name">(Bone)</span></a></li>
       </ol>
     </div>
   </body>
