--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-09 14:31:54 -0500</span>
+          <span class='datetime'>2010-01-25 18:55:50 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,17 @@
             <p>
             BONE, CHANGES
             </p>
+            <p>
+            #### 0.2.4 (2010-01-25) ###############################
+            </p>
+            <ul>
+            <li>CHANGE: URI path starts with /bone/v1 instead of just /v1
+            
+            </li>
+            <li>CHANGE: Depends on Boned 0.2.4
+            
+            </li>
+            </ul>
             <p>
             #### 0.2.3 (2010-01-09) ###############################
             </p>
