--- a/files/lib/bone_rb.html
+++ b/files/lib/bone_rb.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-25 18:56:31 -0500</span>
+          <span class='datetime'>2010-01-25 19:46:59 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -42,6 +42,7 @@
               <ol>
                 <li>uri</li>
                 <li>net/http</li>
+                <li>net/https</li>
                 <li>openssl</li>
                 <li>digest</li>
               </ol>
