--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-25 18:57:00 -0500</span>
+          <span class='datetime'>2010-01-25 19:51:57 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,14 @@
             <p>
             BONE, CHANGES
             </p>
+            <p>
+            #### 0.2.5 (2010-01-25) ###############################
+            </p>
+            <ul>
+            <li>ADDED: Support for HTTPS
+            
+            </li>
+            </ul>
             <p>
             #### 0.2.4 (2010-01-25) ###############################
             </p>
