--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-25 19:51:57 -0500</span>
+          <span class='datetime'>2010-02-20 10:36:45 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,17 @@
             <p>
             BONE, CHANGES
             </p>
+            <p>
+            #### 0.2.6 (2010-02-20) ###############################
+            </p>
+            <ul>
+            <li>CHANGE: Remove hanna dependency
+            
+            </li>
+            <li>CHANGE: Remove boned dependency
+            
+            </li>
+            </ul>
             <p>
             #### 0.2.5 (2010-01-25) ###############################
             </p>
