--- a/classes/Bone/API.html
+++ b/classes/Bone/API.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>: Bone::CLI::Definition [Get Bones]</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-    <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
+    <title>: Bone::API [bone 0.3.0.]</title>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
+    <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
         function popupCode(url) {
@@ -26,27 +26,27 @@
     <div class='class' id='wrapper'>
       <div class='header'>
         <h1 class='name'>
-          <span class='type'>Class</span>
-          Bone::CLI::Definition
+          <span class='type'>Module</span>
+          Bone::API
         </h1>
         <ol class='paths'>
           <li>
-            <a href="../../../files/bin/bone.html">bin/bone</a>
+            <a href="../../files/lib/bone/api_rb.html">lib/bone/api.rb</a>
           </li>
         </ol>
-        <div class='parent'>
-          Parent:
-          <strong>Object</strong>
-        </div>
       </div>
       <div id='content'>
         <div id='text'>
-          <div id='description'>
-            <p>
-            Command-line interface for bin/stella
-            </p>
-          </div>
           <div id='section'>
+            <div id='class-list'>
+              <h2>Classes and Modules</h2>
+              Module <a href="API/ClassMethods.html" class="link">Bone::API::ClassMethods</a><br />
+              Module <a href="API/HTTP.html" class="link">Bone::API::HTTP</a><br />
+              Module <a href="API/Helpers.html" class="link">Bone::API::Helpers</a><br />
+              Module <a href="API/InstanceMethods.html" class="link">Bone::API::InstanceMethods</a><br />
+              Module <a href="API/Memory.html" class="link">Bone::API::Memory</a><br />
+              Module <a href="API/Redis.html" class="link">Bone::API::Redis</a><br />
+            </div>
           </div>
         </div>
       </div>
