--- a/classes/Bone/NoToken.html
+++ b/classes/Bone/NoToken.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>: Bone::BadBone [Get Bones]</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+    <title>: Bone::NoToken [bone 0.3.0.]</title>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
@@ -27,7 +27,7 @@
       <div class='header'>
         <h1 class='name'>
           <span class='type'>Class</span>
-          Bone::BadBone
+          Bone::NoToken
         </h1>
         <ol class='paths'>
           <li>
