--- a/files/LICENSE_txt.html
+++ b/files/LICENSE_txt.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: LICENSE.txt [Get Bones]</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+    <title>File: LICENSE.txt [bone 0.3.0.]</title>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <link href='../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
@@ -31,37 +31,22 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-25 19:52:44 -0500</span>
+          <span class='datetime'>2010-12-17 16:06:28 -0500</span>
         </div>
       </div>
       <div id='content'>
         <div id='text'>
           <div id='description'>
             <p>
-            Copyright &#169; 2009 Solutious Inc, Delano Mandelbaum
+            Copyright &#169; 2009-2011 Delano Mandelbaum, Solutious Inc. Distributes
+            under the same terms as Ruby (copied below).
             </p>
-            <p>
-            Permission is hereby granted, free of charge, to any person obtaining a
-            copy of this software and associated documentation files (the
-            &#8220;Software&#8221;), to deal in the Software without restriction,
-            including without limitation the rights to use, copy, modify, merge,
-            publish, distribute, sublicense, and/or sell copies of the Software, and to
-            permit persons to whom the Software is furnished to do so, subject to the
-            following conditions:
+            <hr size="10"></hr><p>
+            Ruby is copyrighted free software by Yukihiro Matsumoto
+            <matz@netlab.co.jp>. You can redistribute it and/or modify it under either
+            the terms of the GPL (see COPYING.txt file), or the conditions below:
             </p>
-            <p>
-            The above copyright notice and this permission notice shall be included in
-            all copies or substantial portions of the Software.
-            </p>
-            <p>
-            THE SOFTWARE IS PROVIDED &#8220;AS IS&#8221;, WITHOUT WARRANTY OF ANY KIND,
-            EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-            MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
-            NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
-            DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
-            OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE
-            USE OR OTHER DEALINGS IN THE SOFTWARE.
-            </p>
+            <pre>1. You may make and give away verbatim copies of the source form of the&#x000A;   software without restriction, provided that you duplicate all of the&#x000A;   original copyright notices and associated disclaimers.&#x000A;&#x000A;2. You may modify your copy of the software in any way, provided that&#x000A;   you do at least ONE of the following:&#x000A;&#x000A;     a) place your modifications in the Public Domain or otherwise&#x000A;        make them Freely Available, such as by posting said&#x000A;        modifications to Usenet or an equivalent medium, or by allowing&#x000A;        the author to include your modifications in the software.&#x000A;&#x000A;     b) use the modified software only within your corporation or&#x000A;        organization.&#x000A;&#x000A;     c) rename any non-standard executables so the names do not conflict&#x000A;        with standard executables, which must also be provided.&#x000A;&#x000A;     d) make other distribution arrangements with the author.&#x000A;&#x000A;3. You may distribute the software in object code or executable&#x000A;   form, provided that you do at least ONE of the following:&#x000A;&#x000A;     a) distribute the executables and library files of the software,&#x000A;        together with instructions (in the manual page or equivalent)&#x000A;        on where to get the original distribution.&#x000A;&#x000A;     b) accompany the distribution with the machine-readable source of&#x000A;        the software.&#x000A;&#x000A;     c) give non-standard executables non-standard names, with&#x000A;        instructions on where to get the original software distribution.&#x000A;&#x000A;     d) make other distribution arrangements with the author.&#x000A;&#x000A;4. You may modify and include the part of the software into any other&#x000A;   software (possibly commercial).  But some files in the distribution&#x000A;   are not written by the author, so that they are not under this terms.&#x000A;&#x000A;   They are gc.c(partly), utils.c(partly), regex.[ch], st.[ch] and some&#x000A;   files under the ./missing directory.  See each file for the copying&#x000A;   condition.&#x000A;&#x000A;5. The scripts and library files supplied as input to or produced as&#x000A;   output from the software do not automatically fall under the&#x000A;   copyright of the software, but belong to whomever generated them,&#x000A;   and may be sold commercially, and may be aggregated with this&#x000A;   software.&#x000A;&#x000A;6. THIS SOFTWARE IS PROVIDED &quot;AS IS&quot; AND WITHOUT ANY EXPRESS OR&#x000A;   IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED&#x000A;   WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR&#x000A;   PURPOSE.</pre>
           </div>
           <div id='section'>
           </div>
