--- a/files/lib/bone/api_rb.html
+++ b/files/lib/bone/api_rb.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: bone [Get Bones]</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-    <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
+    <title>File: api.rb [bone 0.3.0.]</title>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
+    <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
         function popupCode(url) {
@@ -25,49 +25,26 @@
   <body class='page'>
     <div class='file' id='wrapper'>
       <div class='header'>
-        <h1 class='name'>bone</h1>
+        <h1 class='name'>api.rb</h1>
         <div class='paths'>
-          bin/bone
+          lib/bone/api.rb
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-25 19:52:44 -0500</span>
+          <span class='datetime'>2010-12-17 16:13:49 -0500</span>
         </div>
       </div>
       <div id='content'>
         <div id='text'>
-          <div id='description'>
-            <p>
-            Put our local lib in first place
-            </p>
-          </div>
           <div id='context'>
             <div id='requires'>
               <h2>Required files</h2>
               <ol>
-                <li>bone</li>
-                <li>bone/cli</li>
+                <li>em-http-request</li>
               </ol>
             </div>
           </div>
           <div id='section'>
-            <div id='constants-list'>
-              <h2>Constants</h2>
-              <div class='name-list'>
-                <table summary='Constants'>
-                  <tr class='top-aligned-row context-row'>
-                    <td class='context-item-name'>BASE_PATH</td>
-                    <td>=</td>
-                    <td class='context-item-value'>File.expand_path File.join(File.dirname(__FILE__), '..')</td>
-                    <td>&nbsp;</td>
-                    <td class='context-item-desc'>
-                      
-                      Put our local lib in first place
-                    </td>
-                  </tr>
-                </table>
-              </div>
-            </div>
           </div>
         </div>
       </div>
