--- a/files/lib/bone_rb.html
+++ b/files/lib/bone_rb.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: bone.rb [Get Bones]</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+    <title>File: bone.rb [bone 0.3.0.]</title>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-02-20 10:40:49 -0500</span>
+          <span class='datetime'>2010-12-17 16:06:28 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -40,11 +40,12 @@
             <div id='requires'>
               <h2>Required files</h2>
               <ol>
-                <li>uri</li>
-                <li>net/http</li>
-                <li>net/https</li>
+                <li>familia</li>
+                <li>base64</li>
                 <li>openssl</li>
-                <li>digest</li>
+                <li>time</li>
+                <li>yaml</li>
+                <li>bone/api</li>
               </ol>
             </div>
           </div>
