--- a/files/lib/bone/cli_rb.html
+++ b/files/lib/bone/cli_rb.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: cli.rb [Get Bones]</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+    <title>File: cli.rb [bone 0.3.0.]</title>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-25 19:52:44 -0500</span>
+          <span class='datetime'>2010-12-17 16:06:28 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -41,7 +41,6 @@
               <h2>Required files</h2>
               <ol>
                 <li>bone</li>
-                <li>net/http</li>
               </ol>
             </div>
           </div>
