--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>Classes [Get Bones]</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+    <title>Classes [bone 0.3.0.]</title>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <link href='rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <base target='docwin'>
   </head>
@@ -11,9 +11,11 @@
       <h1>Classes</h1>
       <ol class='classes' id='index-entries'>
         <li><a href="classes/Bone.html">Bone</a>
-        <ol><li><a href="classes/Bone/BadBone.html"><span class="parent">Bone::</span>BadBone</a></li><li><a href="classes/Bone/CLI.html"><span class="parent">Bone::</span>CLI</a>
-        <ol><li><a href="classes/Bone/CLI/Definition.html"><span class="parent">Bone::CLI::</span>Definition</a></li>
-        </ol></li><li><a href="classes/Bone/Problem.html"><span class="parent">Bone::</span>Problem</a></li>
+        <ol><li><a href="classes/Bone/API.html"><span class="parent">Bone::</span>API</a>
+        <ol><li><a href="classes/Bone/API/ClassMethods.html"><span class="parent">Bone::API::</span>ClassMethods</a></li><li><a href="classes/Bone/API/HTTP.html"><span class="parent">Bone::API::</span>HTTP</a></li><li><a href="classes/Bone/API/Helpers.html"><span class="parent">Bone::API::</span>Helpers</a></li><li><a href="classes/Bone/API/InstanceMethods.html"><span class="parent">Bone::API::</span>InstanceMethods</a></li><li><a href="classes/Bone/API/Memory.html"><span class="parent">Bone::API::</span>Memory</a></li><li><a href="classes/Bone/API/Redis.html"><span class="parent">Bone::API::</span>Redis</a>
+        <ol><li><a href="classes/Bone/API/Redis/Key.html"><span class="parent">Bone::API::Redis::</span>Key</a></li><li><a href="classes/Bone/API/Redis/Token.html"><span class="parent">Bone::API::Redis::</span>Token</a></li>
+        </ol></li>
+        </ol></li><li><a href="classes/Bone/CLI.html"><span class="parent">Bone::</span>CLI</a></li><li><a href="classes/Bone/NoToken.html"><span class="parent">Bone::</span>NoToken</a></li><li><a href="classes/Bone/Problem.html"><span class="parent">Bone::</span>Problem</a></li><li><a href="classes/Bone/VERSION.html"><span class="parent">Bone::</span>VERSION</a></li>
         </ol></li>
       </ol>
     </div>
