--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>Files [Get Bones]</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+    <title>Files [bone 0.3.0.]</title>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <link href='rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <base target='docwin'>
   </head>
@@ -10,11 +10,10 @@
     <div id='index'>
       <h1>Files</h1>
       <ol class='files' id='index-entries'>
-        <li><a href="files/CHANGES_txt.html">CHANGES.txt</a></li>
         <li><a href="files/LICENSE_txt.html">LICENSE.txt</a></li>
         <li><a href="files/README_md.html">README.md</a></li>
-        <li><a href="files/bin/bone.html">bin/bone</a></li>
         <li class='other'><a href="files/lib/bone_rb.html">lib/bone.rb</a></li>
+        <li class='other'><a href="files/lib/bone/api_rb.html">lib/bone/api.rb</a></li>
         <li class='other'><a href="files/lib/bone/cli_rb.html">lib/bone/cli.rb</a></li>
         <li>
           <a class='show' href='#' onclick='this.parentNode.parentNode.className += " expanded"; this.parentNode.removeChild(this); return false'>show all</a>
