--- a/files/README_md.html
+++ b/files/README_md.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: README.md [bone 0.3.0.]</title>
+    <title>File: README.md [bone 0.3.1.]</title>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <link href='../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-12-17 16:06:28 -0500</span>
+          <span class='datetime'>2010-12-17 16:18:21 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -42,6 +42,10 @@
             </p>
             <p>
             **Remote environment variables**
+            </p>
+            <p>
+            *NOTE: This version is not compatible with previous versions of <a
+            href="../classes/Bone.html">Bone</a>.*
             </p>
             <p>
             ## Features
